--- a/home/index.css
+++ b/home/index.css
@@ -5,6 +5,64 @@ body {
     color: #404040;
 }
 
+.flashy {
+    animation: flasho .5s linear infinite;
+}
+
+@keyframes flasho {
+    50% { opacity: .75; }
+}
+
+.android {
+    position: absolute;
+    height: 100px;
+    top: 10px;
+    right: 10px;
+}
+
+.frame {
+    border: 5px solid white;
+    border-radius: 25px;
+    background-color: #f0f0f0;
+    position: absolute;
+    padding: 50px;
+    font-size: 25px;
+}
+
+.step span {
+    width: 20px;
+    height: 20px;
+    display: inline-block;
+    border: 1px solid black;
+    border-radius: 10px;
+    background-color: black;
+    color: white;
+    text-align: center;
+}
+
+.steplink {
+    cursor: pointer;
+    text-align: right;
+    position: absolute;
+    color: #A0A0A0;
+}
+
+.steplink:hover {
+    color: royalblue;
+    font-weight: 500;
+}
+
+.step span.complete {
+    color: royalblue;
+    background: white;
+}
+
+.step span.active {
+    color: white;
+    background: royalblue;
+    font-weight: bold;
+}
+
 h1 {
     font-weight: 100;
     font-size: 100px;
